t/batch/directives/invalid/expected/006-bad-shell-quoting.pattern
ValueError: line 3:  --job-name="foo: No closing quotation
